Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJMr0WQrB0QiFJBqbpW4rW",
+      "authorship_tag": "ABX9TyP2UOYBuVttzdCRVNFOL0tp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3NtK8hQC58s8",
-        "outputId": "9c3efcc8-915a-4f1d-80fd-19f0250562e9"
+        "outputId": "2fd57649-cbb1-4cce-8942-b77b8a99ac2d"
       },
       "outputs": [
         {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "kmaiX96F6NCo"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -74,9 +74,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D0jQ9Nsc6c9s",
-        "outputId": "4fb7a19d-eb9e-455a-820d-d7aabb5c0255"
+        "outputId": "b44a558b-84ff-4e51-e7b3-9a10d7b3ec9f"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,9 +100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m35UkozM6gsv",
-        "outputId": "3a57246a-2747-4fb9-9f2f-befc01659a76"
+        "outputId": "bca5e603-284c-4f27-edb9-38382503db4f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -126,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8USRAuSr6klq",
-        "outputId": "039ffe50-d71a-4784-a9ad-0a914c6c4175"
+        "outputId": "71e1b53f-d43e-4df4-ae3e-01fd702a3085"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "tUeTd36l6oPU"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "7zuZg0wDyuPj"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -177,9 +177,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fNZHdCzKxWvN",
-        "outputId": "5c045ca1-26e3-465d-ba8d-2b038327f6e7"
+        "outputId": "56cc52e1-1cbe-4d72-f908-9883ac6b1c35"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "aJ7vcN4uxDi-"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -225,9 +225,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MSJuoLcQwt5S",
-        "outputId": "abf04a8a-5242-41a1-fa41-a205cc4dcb6a"
+        "outputId": "55389737-82ba-4628-e926-87849443afc7"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,9 +251,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6bf86477-7440-46ce-9e26-f7085c62be1e"
+        "outputId": "d391bdbe-cd1e-435a-8425-ce4e34d7e3a9"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "amdW9rBcxO97",
-        "outputId": "89852aa2-e5b6-4304-9a45-b3386924a78e"
+        "outputId": "2e45f4b6-db40-40d2-cdf1-65b922ef4b67"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "hX9mQXu1xgm1"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -314,7 +314,7 @@
       "metadata": {
         "id": "irHM2IR7xmDy"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
       "metadata": {
         "id": "RxHjrKoJH2bs"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -346,7 +346,7 @@
       "metadata": {
         "id": "ls059TgkHwfU"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -356,12 +356,12 @@
       ],
       "metadata": {
         "id": "kLNs4yILHzFq",
-        "outputId": "ce2a2c48-0f8f-47e8-e6e5-18d9c4dc6799",
+        "outputId": "0c79983e-7d46-48ac-dd82-38d54ec5eafd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
       "metadata": {
         "id": "aTQ3w3GQgZ1W"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -398,9 +398,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bbfcb8c5-f54b-4f9a-b2a0-3cb2d66c07fd"
+        "outputId": "55a7f48d-f010-40fb-b2b5-d3c179950916"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,9 +424,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "74TLZGnugduB",
-        "outputId": "c2648dde-aed8-44ea-c4a7-312171fd58e5"
+        "outputId": "02e1ab2a-e120-441a-dc62-d7a2878d71dc"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,9 +450,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HXONsPPNgeC5",
-        "outputId": "13474901-96af-4185-d64a-e7b702a59256"
+        "outputId": "19a60e12-9314-4a78-fbde-d44297aaa353"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,9 +485,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "83853885-c414-446f-f000-ea4cbe41b9b8"
+        "outputId": "0d9c105d-1e96-4413-c509-f471a2866269"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,7 +497,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 22
         }
       ]
     },
@@ -511,9 +511,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jjtNcbyXfzvc",
-        "outputId": "6effabd2-2ff3-42f6-eda7-a45d016d8547"
+        "outputId": "17be6e4a-ffde-45c5-9fce-9246eab85f7f"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 23
         }
       ]
     },
@@ -549,9 +549,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QY38kCb9f9u3",
-        "outputId": "f2a19a20-00cc-47dd-b251-920df3490184"
+        "outputId": "658a1e31-5dc2-49f6-bae5-5fab2ce65fe8"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,7 +561,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 24
         }
       ]
     },
@@ -575,9 +575,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "24hEN6jEgFLY",
-        "outputId": "6fb217ad-33ba-48c8-f38f-550cd7bee888"
+        "outputId": "7be6d060-df42-4f24-e9f7-a3e21221b21e"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 25
         }
       ]
     },
@@ -601,9 +601,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jj9R5d_YgFwG",
-        "outputId": "3275127f-5356-4172-8d3a-9889e504295b"
+        "outputId": "f89e8527-e980-4f24-b2ee-985694500fc0"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -613,7 +613,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 26
         }
       ]
     },
@@ -627,9 +627,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ya20RJa8gSLp",
-        "outputId": "8ec15788-2e0b-40a1-a4cf-e1b0e64fbcae"
+        "outputId": "955b853d-0b47-47a6-e97e-8e2412533e69"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,7 +639,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 27
         }
       ]
     },
@@ -651,7 +651,7 @@
       "metadata": {
         "id": "heXSnJnMgU1c"
       },
-      "execution_count": 1,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -664,9 +664,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JsWO9lUQy5fu",
-        "outputId": "e0185ac1-e742-4643-f172-b40fa0486492"
+        "outputId": "a466e09e-06e6-4c20-ccbc-b6e8a6f63cb1"
       },
-      "execution_count": 2,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -676,7 +676,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 29
         }
       ]
     },
@@ -690,9 +690,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kryN1_SozHpW",
-        "outputId": "343ea50d-1daf-4523-a33d-70d272094585"
+        "outputId": "41d4c109-0303-46b9-b090-203d3d519e79"
       },
-      "execution_count": 3,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -702,7 +702,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 30
         }
       ]
     },
@@ -714,7 +714,7 @@
       "metadata": {
         "id": "OtwcBmKUzJka"
       },
-      "execution_count": 4,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -727,9 +727,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GDXQA5gqzPLV",
-        "outputId": "d3c24246-9552-4093-ba58-7add7ee32a3e"
+        "outputId": "d94fe5c6-657c-41ac-e953-cdcd592b6438"
       },
-      "execution_count": 5,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -739,7 +739,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 32
         }
       ]
     },
@@ -751,17 +751,139 @@
       "metadata": {
         "id": "AsMGvuyDzSkY"
       },
-      "execution_count": 7,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "m = re.match('([0-9]+) ([0-9]+)', '10 295')"
+      ],
       "metadata": {
         "id": "hFya0uatzYL8"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m.group(1)    # 첫 번째 그룹(그룹 1)에 매칭된 문자열을 반환"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "qDjSSJKat8uz",
+        "outputId": "2db9b5c4-de23-4b0a-de72-4cf7dc67f108"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'10'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m.group(2)    # 두 번째 그룹(그룹 2)에 매칭된 문자열을 반환"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "jHXBEXVkuHvR",
+        "outputId": "1d38166b-cf5a-4aff-af73-23e0743f0553"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'295'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m.group()     # 매칭된 문자열을 한꺼번에 반환"
+      ],
+      "metadata": {
+        "id": "EFy1njWSuJ0K",
+        "outputId": "202b1fe7-18f1-4abb-b9db-04f72d8ee243",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'10 295'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m.group()     # 매칭된 문자열을 한꺼번에 반환"
+      ],
+      "metadata": {
+        "id": "rqAORs_CuKnf",
+        "outputId": "01412513-8d7d-467e-e9d7-42e38fa80172",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'10 295'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     }
   ]
 }
