Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2UOYBuVttzdCRVNFOL0tp",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPje7SP4IQtZB96P3Qd8cRe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,7 +62,7 @@
       "metadata": {
         "id": "kmaiX96F6NCo"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +77,7 @@
         "id": "D0jQ9Nsc6c9s",
         "outputId": "b44a558b-84ff-4e51-e7b3-9a10d7b3ec9f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -102,7 +103,7 @@
         "id": "m35UkozM6gsv",
         "outputId": "bca5e603-284c-4f27-edb9-38382503db4f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +129,7 @@
         "id": "8USRAuSr6klq",
         "outputId": "71e1b53f-d43e-4df4-ae3e-01fd702a3085"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +151,7 @@
       "metadata": {
         "id": "tUeTd36l6oPU"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +162,7 @@
       "metadata": {
         "id": "7zuZg0wDyuPj"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +180,7 @@
         "id": "fNZHdCzKxWvN",
         "outputId": "56cc52e1-1cbe-4d72-f908-9883ac6b1c35"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +211,7 @@
       "metadata": {
         "id": "aJ7vcN4uxDi-"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +228,7 @@
         "id": "MSJuoLcQwt5S",
         "outputId": "55389737-82ba-4628-e926-87849443afc7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +254,7 @@
         },
         "outputId": "d391bdbe-cd1e-435a-8425-ce4e34d7e3a9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +280,7 @@
         "id": "amdW9rBcxO97",
         "outputId": "2e45f4b6-db40-40d2-cdf1-65b922ef4b67"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +303,7 @@
       "metadata": {
         "id": "hX9mQXu1xgm1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +315,7 @@
       "metadata": {
         "id": "irHM2IR7xmDy"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +335,7 @@
       "metadata": {
         "id": "RxHjrKoJH2bs"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +347,7 @@
       "metadata": {
         "id": "ls059TgkHwfU"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +362,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +384,7 @@
       "metadata": {
         "id": "aTQ3w3GQgZ1W"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -400,7 +401,7 @@
         },
         "outputId": "55a7f48d-f010-40fb-b2b5-d3c179950916"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +427,7 @@
         "id": "74TLZGnugduB",
         "outputId": "02e1ab2a-e120-441a-dc62-d7a2878d71dc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +453,7 @@
         "id": "HXONsPPNgeC5",
         "outputId": "19a60e12-9314-4a78-fbde-d44297aaa353"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +488,7 @@
         },
         "outputId": "0d9c105d-1e96-4413-c509-f471a2866269"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +514,7 @@
         "id": "jjtNcbyXfzvc",
         "outputId": "17be6e4a-ffde-45c5-9fce-9246eab85f7f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +552,7 @@
         "id": "QY38kCb9f9u3",
         "outputId": "658a1e31-5dc2-49f6-bae5-5fab2ce65fe8"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,7 +578,7 @@
         "id": "24hEN6jEgFLY",
         "outputId": "7be6d060-df42-4f24-e9f7-a3e21221b21e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,7 +604,7 @@
         "id": "jj9R5d_YgFwG",
         "outputId": "f89e8527-e980-4f24-b2ee-985694500fc0"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -629,7 +630,7 @@
         "id": "Ya20RJa8gSLp",
         "outputId": "955b853d-0b47-47a6-e97e-8e2412533e69"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -651,7 +652,7 @@
       "metadata": {
         "id": "heXSnJnMgU1c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -666,7 +667,7 @@
         "id": "JsWO9lUQy5fu",
         "outputId": "a466e09e-06e6-4c20-ccbc-b6e8a6f63cb1"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +693,7 @@
         "id": "kryN1_SozHpW",
         "outputId": "41d4c109-0303-46b9-b090-203d3d519e79"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +715,7 @@
       "metadata": {
         "id": "OtwcBmKUzJka"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -729,7 +730,7 @@
         "id": "GDXQA5gqzPLV",
         "outputId": "d94fe5c6-657c-41ac-e953-cdcd592b6438"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -751,7 +752,7 @@
       "metadata": {
         "id": "AsMGvuyDzSkY"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +763,7 @@
       "metadata": {
         "id": "hFya0uatzYL8"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -778,7 +779,7 @@
         "id": "qDjSSJKat8uz",
         "outputId": "2db9b5c4-de23-4b0a-de72-4cf7dc67f108"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,7 +809,7 @@
         "id": "jHXBEXVkuHvR",
         "outputId": "1d38166b-cf5a-4aff-af73-23e0743f0553"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -831,14 +832,14 @@
         "m.group()     # 매칭된 문자열을 한꺼번에 반환"
       ],
       "metadata": {
-        "id": "EFy1njWSuJ0K",
-        "outputId": "202b1fe7-18f1-4abb-b9db-04f72d8ee243",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "EFy1njWSuJ0K",
+        "outputId": "202b1fe7-18f1-4abb-b9db-04f72d8ee243"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,14 +862,14 @@
         "m.group()     # 매칭된 문자열을 한꺼번에 반환"
       ],
       "metadata": {
-        "id": "rqAORs_CuKnf",
-        "outputId": "01412513-8d7d-467e-e9d7-42e38fa80172",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "rqAORs_CuKnf",
+        "outputId": "01412513-8d7d-467e-e9d7-42e38fa80172"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -884,6 +885,47 @@
           "execution_count": 38
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        " \n",
+        "p = re.compile('^[a-zA-Z0-9+-_.]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$')\n",
+        "emails = ['python@mail.example.com', 'python+kr@example.com',              # 올바른 형식\n",
+        "          'python-dojang@example.co.kr', 'python_10@example.info',         # 올바른 형식\n",
+        "          'python.dojang@e-xample.com',                                    # 올바른 형식\n",
+        "          '@example.com', 'python@example', 'python@example-com']          # 잘못된 형식\n",
+        " \n",
+        "for email in emails:\n",
+        "    print(p.match(email) != None, end=' ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pfIrJI9OHynr",
+        "outputId": "4a468955-0dfd-47d7-aa27-05357910d547"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True True True True True False False False "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 43.6 URL 검사하기 차례"
+      ],
+      "metadata": {
+        "id": "cYhsRCltH6EW"
+      }
     }
   ]
 }
