Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPje7SP4IQtZB96P3Qd8cRe",
+      "authorship_tag": "ABX9TyPDI/7kcRNe3p56CpYdcttd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -907,7 +907,7 @@
         "id": "pfIrJI9OHynr",
         "outputId": "4a468955-0dfd-47d7-aa27-05357910d547"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -926,6 +926,32 @@
       "metadata": {
         "id": "cYhsRCltH6EW"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "p = re.compile('^(https?://)[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+/[a-zA-Z0-9-_/.?=]*')\n",
+        "print(p.match(input()) != None)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RIJtA2rXT-b4",
+        "outputId": "6b443989-09be-48ad-bff7-257c330dfe16"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dde\n",
+            "False\n"
+          ]
+        }
+      ]
     }
   ]
 }
