Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPDI/7kcRNe3p56CpYdcttd",
+      "authorship_tag": "ABX9TyPbXaHG9l0gRRs8S45S4Dx0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -935,13 +935,13 @@
         "print(p.match(input()) != None)"
       ],
       "metadata": {
+        "id": "RIJtA2rXT-b4",
+        "outputId": "6b443989-09be-48ad-bff7-257c330dfe16",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "RIJtA2rXT-b4",
-        "outputId": "6b443989-09be-48ad-bff7-257c330dfe16"
+        }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -952,6 +952,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "math.pi"
+      ],
+      "metadata": {
+        "id": "olYv8aI7vP0f",
+        "outputId": "c2dd6750-751c-4edb-e58c-d0f411fa3ace",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.141592653589793"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mHbhs3t6vR_x"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
