Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPbXaHG9l0gRRs8S45S4Dx0",
+      "authorship_tag": "ABX9TyPC01FWf9ixoxYJnCOTZK2p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -960,13 +960,13 @@
         "math.pi"
       ],
       "metadata": {
-        "id": "olYv8aI7vP0f",
-        "outputId": "c2dd6750-751c-4edb-e58c-d0f411fa3ace",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "olYv8aI7vP0f",
+        "outputId": "c2dd6750-751c-4edb-e58c-d0f411fa3ace"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -982,9 +982,45 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import math\n",
+        "math.sqrt(4.0)"
+      ],
+      "metadata": {
+        "id": "mHbhs3t6vR_x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "495b97d6-b1d1-4adb-9f21-fd3d7d0c5878"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###44.1.1"
+      ],
+      "metadata": {
+        "id": "b4O3D4xTcfOq"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "mHbhs3t6vR_x"
+        "id": "PNv9ekkIcd_X"
       },
       "execution_count": null,
       "outputs": []
