Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPC01FWf9ixoxYJnCOTZK2p",
+      "authorship_tag": "ABX9TyPntuOLOFl9Z+tT39SJEqcc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -988,12 +988,12 @@
       ],
       "metadata": {
         "id": "mHbhs3t6vR_x",
+        "outputId": "495b97d6-b1d1-4adb-9f21-fd3d7d0c5878",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "495b97d6-b1d1-4adb-9f21-fd3d7d0c5878"
+        }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,12 +1018,342 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import math as m\n",
+        "m.sqrt(4.0)"
+      ],
       "metadata": {
-        "id": "PNv9ekkIcd_X"
+        "id": "PNv9ekkIcd_X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "449d6043-c08f-4039-ec0c-5a9d74a55abe"
       },
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m.sqrt(2.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LMU0KbX9Fpjc",
+        "outputId": "a61d57bd-db67-4f23-af2f-2f8313be90d9"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4142135623730951"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import pi"
+      ],
+      "metadata": {
+        "id": "qOLrj-J-FyWk"
+      },
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pi"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tICC_Z2BF8pE",
+        "outputId": "38caad7a-009c-4c29-91fd-84c313be349c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.141592653589793"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import sqrt\n",
+        "sqrt(4.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rHtO7c6rF9lh",
+        "outputId": "44a8271c-81ac-459f-d7ed-9df04c800556"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sqrt(2.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DesDmKHrGD7l",
+        "outputId": "0112f5de-a0cc-40e5-fe33-ad70e28476a6"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4142135623730951"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import pi, sqrt    # math 모듈에서 pi, sqrt를 가져옴\n",
+        "pi"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "stcMvO4OGGH1",
+        "outputId": "287d2657-1404-49ad-a838-6541bf96e9fc"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.141592653589793"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sqrt(4.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JJBToZbHIlkN",
+        "outputId": "e6b80139-3794-47cf-dd93-111ba0dc9378"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sqrt(2.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "draay-x9In1v",
+        "outputId": "61f8f1fa-3b77-4810-b1a2-b5befa022765"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4142135623730951"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import *    # math 모듈의 모든 변수, 함수, 클래스를 가져옴\n",
+        "pi\n",
+        "sqrt(4.0)\n",
+        "sqrt(2.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SWpCZWdiIpRf",
+        "outputId": "fd5114c2-6507-487b-8eea-5f6f5440c475"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4142135623730951"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import sqrt as s    # math 모듈에서 sqrt 함수를 가져오면서 이름을 s로 지정\n",
+        "s(4.0)\n",
+        "s(2.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gj-OeXquJIG5",
+        "outputId": "82051d22-5616-4667-81e5-540b6f462d72"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4142135623730951"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import pi as p, sqrt as s\n",
+        "p\n",
+        "s(4.0)\n",
+        "s(2.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3XSutsg8JMlf",
+        "outputId": "f0664eb9-3184-423d-c519-8e0511fb04f5"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4142135623730951"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "del math\n",
+        "\n",
+        "import importlib\n",
+        "import math\n",
+        "importlib.reload(math)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qSn93AoOJRCf",
+        "outputId": "a64efc76-e3a4-4a6f-9b30-d7006ab465aa"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<module 'math' (built-in)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     }
   ]
 }
